styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --clr-primary: 180deg 66% 49%;
        --clr-primary-o: 180deg 66% 83%;
        --clr-tertiary: 257deg 27% 26%;
        --clr-secondary: 0deg 87% 67%;
        --clr-surface-l: 255deg 11% 22%;
        --clr-surface-d: 260deg 8% 14%;
        --clr-neutral-l: 0deg 0% 75%;
        --clr-neutral-d: 257deg 7% 63%;
    }

    html {
        overflow-x: hidden;
        overflow-y: auto;
        -webkit-text-size-adjust: none; /* for iOS Safari */
        text-size-adjust: none; /* for other mobile browsers */
    }

    html:focus-within {
        scroll-behavior: smooth;
    }

    body {
        min-height: 100vh;
        max-width: 100%;
        overflow-x: clip;
        text-rendering: optimizeSpeed;
        font-weight: 500;
        font-family: "Poppins", system-ui, sans-serif;
        word-wrap: break-word;
        background-image: conic-gradient(
            from 0turn at 150% -20%,
            #fff,
            #fff 230deg,
            hsl(var(--clr-primary-o)) 247deg,
            #fff 250deg
        );
        background-attachment: fixed;
    }
    main {
        min-height: calc(100vh - 40rem);
    }

    @media screen and (min-width: 1280px) {
        main {
            min-height: calc(100vh - 16rem);
        }
    }

    /* Add pointer cursors to interactive elements  */
    label:not([disabled]),
    button:not([disabled]),
    select:not([disabled]),
    summary:not([disabled]),
    [type="radio"]:not([disabled]),
    [type="submit"]:not([disabled]),
    [type="checkbox"]:not([disabled]) {
        cursor: pointer;
    }

    [disabled] {
        cursor: not-allowed;
    }

    /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
    @media (prefers-reduced-motion: reduce) {
        html:focus-within {
            scroll-behavior: auto;
        }

        *,
        *::before,
        *::after {
            animation-duration: 0.01ms !important;
            animation-iteration-count: 1 !important;
            transition-duration: 0.01ms !important;
            scroll-behavior: auto !important;
        }
    }

    /* custom scrollbar */

    body {
        scrollbar-gutter: stable both-edges;
    }

    ::-webkit-scrollbar {
        min-width: 100%;
    }

    ::-webkit-scrollbar-track {
        @apply bg-primary-600;
    }

    ::-webkit-scrollbar-thumb {
        @apply bg-primary-500;
        border-radius: 100px;
    }

    h1 {
        @apply text-3xl font-bold xl:text-6xl;
    }

    h2 {
        @apply text-xl font-bold xl:text-4xl;
    }
    h3 {
        @apply text-lg font-bold xl:text-2xl;
    }
    h4 {
        @apply font-bold;
    }

    .input-transition {
        transition: color 300ms ease-in, background-color 300ms ease-in,
            transform 300ms ease-in, font-size 300ms ease-in 100ms;
    }
}

@layer components {
    /* nav button */
    .mobile-nav-toggle {
        overflow: hidden;
        stroke-linecap: round;
        stroke-width: 6;
    }
    .mobile-nav-toggle > svg {
        position: absolute;
        bottom: -25%;
        stroke: hsl(0, 0%, 0%);
        fill: none;
        width: 150%;
        height: 150%;
        transition: transform 1s cubic-bezier(0.03, 0.5, 0.02, 0.03),
            rotate 1s cubic-bezier(0.03, 0.23, 0.62, 1);
    }
    .mobile-nav-toggle > svg > path {
        transition: 1s;
        stroke-dasharray: 60 31 60 300;
    }
    .mobile-nav-toggle[aria-expanded="true"] > svg {
        rotate: 0.125turn;
    }
    .mobile-nav-toggle[aria-expanded="true"] > svg > path {
        stroke-dasharray: 60 105 60 300;
        stroke-dashoffset: -90;
        transform: translate(2px, -10px);
    }
    .mobile-nav-toggle:focus-visible {
        outline: 5px solid hsl(231deg, 77%, 90%);
        outline-offset: 5px;
    }

    /* 
glow effect by Aaron Iker https://dribbble.com/shots/17674758-Button-Glow
as described by Kevin Powell https://codepen.io/kevinpowell/pen/rNrdzdx
*/
    .glow-effect {
        /* --glow-line-color: #efeac3; */
        /* --glow-line-thickness: 2px; */
        /* --glow-line-length: 20px; */
        /* --glow-blur-color: #333fff; */
        /* --glow-blur-size: 5px; */
        /* --glow-offset: 0px; */
        /* --animation-speed: 1200ms; */
        /* do not change, used for calculations */
        --container-offset: 100px;
        position: relative;
        display: block;
        /* position: absolute;
  inset: 0; */
    }
    .glow-effect:is(:hover, :focus) {
        outline-offset: -48px;
    }

    .glow-container {
        display: block;
        pointer-events: none;
        position: absolute;
        inset: calc(var(--container-offset) / -2);
        width: calc(100% + var(--container-offset));
        height: calc(100% + var(--container-offset));
        opacity: 0;
        outline: none;
    }

    .glow-blur,
    .glow-line {
        display: block;
        width: calc(100% - var(--container-offset) + var(--glow-offset));
        height: calc(100% - var(--container-offset) + var(--glow-offset));
        x: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
        y: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
        /* rx: 1.25rem; */
        fill: transparent;
        stroke-linecap: round;
        stroke-width: 5px;
        stroke-dasharray: var(--glow-line-length)
            calc(50px - var(--glow-line-length));
    }

    .glow-effect > *:is(:hover, :focus) ~ * > :is(.glow-line, .glow-blur) {
        stroke-dashoffset: calc(-3.5 * var(--glow-line-length));
        transition: stroke-dashoffset var(--animation-speed) ease-in;
        outline: none;
    }

    .glow-line {
        stroke-width: var(--glow-line-thickness);
    }

    .glow-blur {
        filter: blur(var(--glow-blur-size));
        stroke-width: var(--glow-blur-size);
    }
    .glow-effect > *:is(:hover, :focus) {
        outline-offset: 4px;
    }

    .glow-effect > *:is(:hover, :focus) ~ .glow-container {
        outline: none;
        border: none;
        animation: glow-visibility cubic-bezier(0.42, 1.03, 0.76, 0.4)
            var(--animation-speed);
        opacity: var(--final-opacity);
    }

    @keyframes glow-visibility {
        0% {
            opacity: 0;
        }
        25%,
        75% {
            opacity: 1;
        }
        100% {
            opacity: var(--final-opacity);
        }
    }

    .glow-effect[data-glow-animation="false"] {
        --glow-line-length: 50px;
    }
    .glow-effect[data-glow-offset="true"] {
        --glow-offset: 10px;
    }

    .glow-effect[data-glow-animation="grow"]
        > *:is(:hover, :focus)
        ~ .glow-container {
        scale: 1.3;
        transition: scale var(--animation-speed) linear;
    }
}

